<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/pages">
        <item
            android:id="@+id/bracelets"
            android:icon="@drawable/ic_bangle"
            android:title="@string/bracelets" />
        <item
            android:id="@+id/pierres"
            android:icon="@drawable/ic_zen"
            android:title="@string/pierres" />
        <item
            android:id="@+id/colliers"
            android:icon="@drawable/ic_necklace"
            android:title="@string/collier" />
        <item
            android:id="@+id/boucles"
            android:icon="@drawable/ic_jewel"
            android:title="@string/boucles" />
        <item
            android:id="@+id/cles"
            android:icon="@drawable/ic_key_chain"
            android:title="@string/cles" />
        <item
            android:id="@+id/commentaires"
            android:enabled="false"
            android:icon="@drawable/ic_comment"
            android:title="@string/commentaires" />
    </group>
    <group android:id="@+id/controle">
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/deconnexion" />
    </group>
</menu>